# distAAnce

./: .gitpod.Dockerfile  .gitpod.yml  .markdownlintignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yaml  release.yaml  release_upload.yaml
meta/: LICENSE-HEADER
src/distance_aa_cli/: app.rs  cli.rs  main.rs
src/distance_aa_lib/: data.rs  lib.rs  models.rs
src/distance_aa_lib/data/: amino_acid_data.json  amino_acids.rs  grantham_distances.rs
src/distance_aa_lib/models/: amino_acid.rs  grantham_distance.rs
