[package]
name = "distance_aa"
version ="1.0.0-alpha.1"
edition = "2021"
rust-version = "1.67.1"
description = "A backend for the distAAnce web application."
readme = "README.md"
repository = "https://github.com/CogDisResLab/distAAnce"
license = "MIT OR Apache-2.0"
authors = ["Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"]
categories = ["command-line-utilities", "science", "web-programming::api-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "distance_aa_lib"
path = "src/distance_aa_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "distance_aa_cli"
path = "src/distance_aa_cli/main.rs"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
codegen-units = 1


[dependencies]