[package]
name = "distance_aa"
version ="1.0.0-alpha.1"
edition = "2021"
rust-version = "1.64.0"
description = "A backend for the distAAnce web application."
readme = "README.md"
repository = "https://github.com/CogDisResLab/distAAnce"
license = "MIT OR Apache-2.0"
authors = ["Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"]
categories = ["command-line-utilities", "science", "web-programming::api-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "distance_aa_lib"
path = "src/distance_aa_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "distance_aa_cli"
path = "src/distance_aa_cli/main.rs"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
codegen-units = 1


[dependencies]
actix-web = "4.3.1"
anyhow = { version = "1.0.69", features = ["backtrace"] }
clap = { version = "4.1.8", features = ["cargo", "debug", "env", "string", "unicode", "derive"] }
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
env_logger = "0.10.0"
tokio = { version = "1.26.0", features = ["full"] }
